--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
-    <script src="script.js" async defer></script>
+    <div id="app">
+     
+    </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script> 
+    <script src="script-vue.js" async defer></script>
   </body>
 </html>
