--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
 
 <body>
   <div id="app">
-    <div v-for="rocket, index in lastLaunches">
+    <div class="rocket-units" v-for="rocket, index in lastLaunches">
       <img v-bind:src=lastLaunches[index].links.flickr_images[0]>
       <p>Mission Name: {{ lastLaunches[index].mission_name }}</p>
       <p>Year: {{ lastLaunches[index].launch_year }} </p>
-      <p>Date: {{ lastLaunches[index].launch_date_local }}</p>
+      <p>Date: {{ lastLaunches[index].launch_date_local.slice(0, 10) }}</p>
       <p>Rocket Name: {{ lastLaunches[index].rocket.rocket_name }}</p>
       <p>Rocket Type: {{ lastLaunches[index].rocket.rocket_type }}</p>
       <p>Launch Site: {{ lastLaunches[index].launch_site.site_name_long }}</p>
     </div>
   </div>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/vue"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script src="script-vue.js" async defer></script>
 </body>
 
